--- a/parldata/cmpages/sp/bulletins/contents-bb-08_bb-03-05.htm
+++ b/parldata/cmpages/sp/bulletins/contents-bb-08_bb-03-05.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-03-04" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-03-05.htm" />
+<meta name="Source" content="BB02-20080305.doc />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -91,34 +91,59 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 39/2008: Wednesday 5 March 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
+          <table  border="0" cellpadding="0" cellspacing="0" class="pushedTable" title="Summary of Today&rsquo;s Business" summary="Summary of Today&rsquo;s Business">
+            <caption class="caption">
+            </caption>
+            <tr class="pushedTable">
+              <td><p align="center"><strong>Summary of Today&rsquo;s Business</strong></p>
+                  <p align="center"><strong>Meetings of Committees</strong></p>
+                  <p><strong>10.00 am</strong>&#9;Education, Lifelong Learning and Culture Committee&#9;<strong>Committee Room 4</strong></p>
+                  <p><strong>10.00 am</strong>&#9;Local Government and Communities Committee&#9;<strong>Committee Room 3</strong></p>
+                  <p><strong>10.00 am</strong>&#9;Rural Affairs and Environment Committee&#9;<strong>Committee Room 1</strong></p>
+                  <p><strong>10.45 am</strong>&#9;Economy, Energy and Tourism Committee&#9;<strong>Committee Room 6</strong></p>
+                  <p><strong>10.45 am</strong>&#9;Health and Sport Committee&#9;<strong>Committee Room 5</strong></p>
+                  <hr />
+                  <p align="center"><strong>Meeting of the Parliament</strong></p>
+                  <p><strong>2.00 pm</strong>&#9;Time for Reflection &ndash; Jane Bentley, Scottish Interfaith Council Youth Steering Committee</p>
+                  <p><em>followed by</em>&#9;Parliamentary Bureau Motions</p>
+                  <p><em>followed by</em>&#9;Ministerial Statement: Borders Rail Link</p>
+                  <p><em>followed by</em>&#9;Scottish Government Debate: Organ Donation Taskforce Report</p>
+                  <p><em>followed by</em>&#9;Business Motion</p>
+                  <p><em>followed by</em>&#9;Parliamentary Bureau Motions</p>
+                  <p><strong>5.00 pm</strong>&#9;Decision Time</p>
+                  <p><em>followed by</em>&#9;Members&rsquo; Business &ndash; debate on the subject of S3M-1028 Trish Godman: Scottish Wheelchair Users and their Human Rights </p>
+                  </DIR></DIR></DIR></DIR><strong>For full details of today&rsquo;s business, see Section <a href="bb-03-05a.htm">A</a>.  For full details of the future business, see sections <a href="bb-03-05b.htm">B</a> and C.</strong>
+                  <hr />            </td>
+            </tr>
+          </table>
           <p align="center"><strong>Contents</strong></p>
           <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
           <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
+          <p><a href="bb-03-05a.htm"><strong>Section A: <U>Today&rsquo;s Business</u></strong></a><strong></strong></p>
           <blockquote>
-            <p>- Meetings of Committees</p>
+            <p>- Meetings of Committees`</p>
             <p>- Meeting of the Parliament</p>
           </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
+          <p><strong><a href="bb-03-05b.htm">Section B: <U>Future Meetings of the Parliament</u></a><U></u></strong></p>
+          <p>Section C: <u>Future Meetings of Committees</u></p>
           <p>Section D: <U>Oral Questions</u></p>
           <blockquote>
             <p>- Questions selected for First Minister&rsquo;s Question Time </p>
             <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
           </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
+          <p><a href="bb-03-05e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
+          <p><strong><a href="bb-03-05f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
           <p>Section G: <U>Bills</u></p>
           <blockquote>
             <p>- New Bills introduced</p>
             <p>- New amendments to Bills</p>
             <p>- Members&rsquo; Bills proposals</p>
           </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
+          <p><a href="bb-03-05h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
           <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+          <p><strong><a href="bb-03-05j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
