--- a/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-05a.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-05a.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-02-04" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-02-05a.htm" />
+<meta name="Source" content="BB02-20080205.doc />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -83,7 +83,7 @@
       <img src="../../../images/pixel/transparent.gif" alt=" " width="0" height="0" /></td>
      <td class="curveCell2"></td>
      <td class="crumbTrail">
-      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --><a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
+      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --> <a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
     </tr>
     <tr>
      <td rowspan="3" valign="top" class="navTable" style="border-left: #999999 1px solid;border-bottom: #999999 1px solid; ">&nbsp;</td>
@@ -91,34 +91,126 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 22/2008: Tuesday 5 February 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
-          <p align="center"><strong>Contents</strong></p>
-          <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
-          <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
-          <blockquote>
-            <p>- Meetings of Committees</p>
-            <p>- Meeting of the Parliament</p>
-          </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
-          <p>Section D: <U>Oral Questions</u></p>
-          <blockquote>
-            <p>- Questions selected for First Minister&rsquo;s Question Time </p>
-            <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
-          </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
-          <p>Section G: <U>Bills</u></p>
-          <blockquote>
-            <p>- New Bills introduced</p>
-            <p>- New amendments to Bills</p>
-            <p>- Members&rsquo; Bills proposals</p>
-          </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
-          <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-05.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center">An</td>
+    <td width="7%" align="center"><a href="bb-02-05a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-05b.htm">B</a></strong></td>
+    <td width="7%" align="center"><a href="bb-02-05c.htm"><strong>C</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-05d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-05e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-05f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-05h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center">I</td>
+    <td width="7%" align="center"><strong><a href="bb-02-05j.htm">J</a></strong></td>
+  </tr>
+</table>
+<p align="center"><strong>Section A &ndash; Today&rsquo;s Business</strong></p>
+<p align="center"><strong>Meetings of Committees</strong></p>
+<p><strong>All meetings take place in the Scottish Parliament, unless otherwise specified.  Contact details for Committee Clerks are provided at the <a href="bb-02-05j.htm#end">end of the Bulletin</a>.</strong></p>
+<p align="center"><strong>European and External Relations Committee<br />
+</strong><strong>3<sup>rd</sup> Meeting, 2008</strong></p>
+<p>The Committee will meet at 10.00 am in Committee Room 2</p>
+<p>1.&#9;<strong>Lisbon Treaty: </strong>The Committee will take evidence from&mdash;</p>
+<blockquote>
+  <p>Andrew Duff MEP, East of England.</p>
+</blockquote>
+<p>2.&#9;<strong>EU budget review: </strong>The Committee will take evidence from&mdash;</p>
+<blockquote>
+  <p>John Bachtler, Professor of European Policy Studies, University of Strathclyde. </p>
+</blockquote>
+<p>3.&#9;<strong>Scottish Government&rsquo;s International Strategy: </strong>The Committee will take evidence from&mdash; </p>
+<blockquote>
+  <p>Robin Naysmith, Scottish Government Counsellor in North America; and Leslie Evans, Director, Europe, External Affairs and Culture Directorate, Scottish Government.</p>
+</blockquote>
+<p align="center"><strong>Justice Committee<br />
+</strong><strong>4<sup>th</sup> Meeting, 2008</strong></p>
+<p>The Committee will meet at 10.00 am in Committee Room 1</p>
+<p>1.&#9;<strong>Decision on taking business in private: </strong>The Committee will consider whether to take item 3 in private.</p>
+<p>2.&#9;<strong>Subordinate legislation: </strong>The Committee will consider the following negative instruments&mdash;</p>
+<blockquote>
+  <p>the Criminal Procedure (Scotland) Act 1995 Compensation Offer (Maximum Amount) Order 2008 (SSI&nbsp;2008/7); and</p>
+  <p>the Discontinuance of Legalised Police Cells (Scotland) Rules 2008 (SSI&nbsp;2008/8).</p>
+</blockquote>
+<p>3.&#9;<strong>Judiciary and Courts (Scotland) Bill: </strong>The Committee will consider its approach to Stage&nbsp;1 of the Bill.</p>
+<p align="center"><strong>Finance Committee<br />
+</strong><strong>5<sup>th</sup> Meeting, 2008</strong></p>
+<p>The Committee will meet at 2.00 pm in Committee Room 1</p>
+<p>1.&#9;<strong>Decision on taking business in private: </strong>The Committee will consider whether to take item 3 in private.</p>
+<p>2.&#9;<strong>Judiciary and Courts (Scotland) Bill: </strong>The Committee will consider its approach to the Financial Memorandum of the Judiciary and Courts (Scotland) Bill.</p>
+<p>3.&#9;<strong>Work programme: </strong>The Committee will consider its work programme.</p>
+<p align="center"><strong>Transport, Infrastructure and Climate Change Committee<br />
+</strong><strong>3<sup>rd</sup> Meeting, 2008</strong></p>
+<p>The Committee will meet at 2.00 pm in Committee Room 2</p>
+<p>1.&#9;<strong>Climate Change: </strong>The Committee will take evidence on the consultation on the proposed Scottish Climate Change Bill from&mdash;</p>
+<blockquote>
+  <p>Stewart Stevenson MSP, Minister for Transport, Infrastructure and Climate Change.</p>
+</blockquote>
+<p align="center"><strong>Standards, Procedures and Public Appointments Committee<br />
+</strong><strong>2<sup>nd</sup> Meeting, 2008</strong></p>
+<p>The Committee will meet at 2.15 pm in Committee Room 6</p>
+<p>1.&#9;<strong>Public Appointments Commissioner - Equalities Strategy consultation: </strong>The Committee will take evidence from&mdash;</p>
+<blockquote>
+  <p><strong>&#9;</strong>Karen Carlton, Commissioner for Public Appointments in Scotland.</p>
+</blockquote>
+<p><em>Not before 2.45 pm</em></p>
+<p>2.&#9;<strong>Audit Committee - title and remit: </strong>The Committee will take evidence from&mdash;</p>
+<blockquote>
+  <p>Hugh Henry MSP, Convener of the Audit Committee, Tracey Reilly, Clerk to the Audit Committee, and Robert Black, Auditor General for Scotland,</p>
+</blockquote>
+<p>and then consider a paper in relation to the inquiry.</p>
+<p>3.&#9;<strong>Review of Volume 2, Section 8 of the Code of Conduct: </strong>The Committee will consider written evidence received from stakeholders and interested parties.</p>
+<p>4.&#9;<strong>Decision on taking business in private: </strong>The Committee will decide whether to consider item 5 on a report from the Scottish Parliamentary Standards Commissioner and item 6 on its work programme in private.  The Committee will also consider whether to take its draft report on the Office of the Commissioner for Public Appointments in Scotland (OCPAS) Equalities Strategy consultation in private at its next meeting.</p>
+<p>5.&#9;<strong>Scottish Parliamentary Standards Commissioner: </strong>The Committee will consider a report from the Scottish Parliamentary Standards Commissioner.</p>
+<p>6.&#9;<strong>Work programme: </strong>The Committee will consider its work programme.</p>
+<p align="center"><strong>Subordinate Legislation Committee<br />
+</strong><strong>5<sup>th</sup> Meeting, 2008</strong></p>
+<p>The Committee will meet at 2.15 pm in Committee Room 4</p>
+<p>1.&#9;<strong>Scottish Government responses: </strong>The Committee will consider the Scottish Government&rsquo;s responses in relation to the following&mdash;</p>
+<blockquote>
+  <p>the Bluetongue (Scotland) Order 2008 (SSI 2008/11); and</p>
+  <p>the Scottish Road Works Register (Prescribed Fees and Amounts) Regulations 2008 (SSI 2008/16).</p>
+</blockquote>
+<p>2.&#9;<strong>Draft instruments subject to approval: </strong>The Committee will consider the following&mdash;</p>
+<blockquote>
+  <p>the Renewables Obligation (Scotland) Amendment Order 2008 (SSI&nbsp;2008/draft); and</p>
+  <p>the Home Detention Curfew Licence (Amendment of Specified Days) (Scotland) Order 2008 (SSI 2008/draft).</p>
+</blockquote>
+<p>3.&#9;<strong>Instruments subject to annulment: </strong>The Committee will consider the following&mdash;</p>
+<blockquote>
+  <p>the Police Grant (Variation) (Scotland) Order 2008 (SSI 2008/20).</p>
+</blockquote>
+<p>4.&#9;<strong>Instruments not laid before the Parliament: </strong>The Committee will consider the following&mdash;</p>
+<blockquote>
+  <p>the Management of Offenders etc. (Scotland) Act 2005 (Commencement No.4) Order 2008 (SSI 2008/21); and</p>
+  <p>the Abolition of Bridge Tolls (Scotland) Act 2008 (Commencement) Order 2008 (SSI 2008/22).</p>
+</blockquote>
+<p align="center"><strong>Scottish Parliamentary Pensions Scheme Committee<br />
+</strong><strong>1<sup>st</sup> Meeting, 2008</strong></p>
+<p>The Committee will meet at 3.00 pm in Committee Room 5</p>
+<p>1.&#9;<strong>Decision on taking business in private: </strong>The Committee will decide whether to take items 2 and 3 in private.  The Committee will also decide whether to consider in private at future meetings the main themes arising from evidence sessions and the draft report on its consultation into the Scottish Parliamentary Pension Scheme.</p>
+<p>2.&#9;<strong>Scottish Parliamentary Pension Scheme Consultation: </strong>The Committee will consider its approach to evidence taking.</p>
+<p>3.&#9;<strong>Scottish Parliamentary Pension Scheme Consultation: </strong>The Committee will consider the responses to its consultation, the main issues arising and publication of responses on the Committee&rsquo;s webpage.</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-05.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center">An</td>
+    <td width="7%" align="center"><a href="bb-02-05a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-05b.htm">B</a></strong></td>
+    <td width="7%" align="center"><a href="bb-02-05c.htm"><strong>C</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-05d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-05e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-05f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-05h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center">I</td>
+    <td width="7%" align="center"><strong><a href="bb-02-05j.htm">J</a></strong></td>
+  </tr>
+</table>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
