--- a/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-07d.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-07d.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-02-06" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-02-07d.htm" />
+<meta name="Source" content="BB02-20080207.htm />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -83,7 +83,7 @@
       <img src="../../../images/pixel/transparent.gif" alt=" " width="0" height="0" /></td>
      <td class="curveCell2"></td>
      <td class="crumbTrail">
-      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --><a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
+      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --> <a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
     </tr>
     <tr>
      <td rowspan="3" valign="top" class="navTable" style="border-left: #999999 1px solid;border-bottom: #999999 1px solid; ">&nbsp;</td>
@@ -91,34 +91,74 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 24/2008: Thursday 7 February 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
-          <p align="center"><strong>Contents</strong></p>
-          <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
-          <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
-          <blockquote>
-            <p>- Meetings of Committees</p>
-            <p>- Meeting of the Parliament</p>
-          </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
-          <p>Section D: <U>Oral Questions</u></p>
-          <blockquote>
-            <p>- Questions selected for First Minister&rsquo;s Question Time </p>
-            <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
-          </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
-          <p>Section G: <U>Bills</u></p>
-          <blockquote>
-            <p>- New Bills introduced</p>
-            <p>- New amendments to Bills</p>
-            <p>- Members&rsquo; Bills proposals</p>
-          </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
-          <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-07.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-07an.htm"><strong>An</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-07a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07b.htm">B</a></strong></td>
+    <td width="7%" align="center">C</td>
+    <td width="7%" align="center"><a href="bb-02-07d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-07h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-07i.htm"><strong>I</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07j.htm">J</a></strong></td>
+  </tr>
+</table>
+<p align="center"><strong>Section D &ndash; Members Selected for General and Themed Questions on 21 February 2008</strong></p>
+<p>The following members have been randomly selected for General and Themed Question Times on the above date. The deadline for lodging the text of questions is 12 noon on Wednesday 13 February 2008. These will then appear in this section of the Business Bulletin on Monday 18 February 2008.</p>
+<p align="center"><strong>General</strong></p>
+<p><strong>1. Richard Baker<br />
+</strong><strong>2. Malcolm Chisholm<br />
+</strong><strong>3. Jim Hume<br />
+</strong><strong>4. John Farquhar Munro<br />
+</strong><strong>5. Aileen Campbell<br />
+</strong><strong>6. Irene Oldfather<br />
+</strong><strong>7. Alasdair Allan<br />
+</strong><strong>8. Tricia Marwick<br />
+</strong><strong>9. Mr Frank McAveety<br />
+</strong><strong>10. Hugh O&rsquo;Donnell</strong></p>
+<p align="center"><strong>Health and Wellbeing</strong></p>
+<p><strong>1. Keith Brown<br />
+</strong><strong>2. Alison McInnes<br />
+</strong><strong>3. Mary Scanlon<br />
+</strong><strong>4. Sarah Boyack<br />
+</strong><strong>5. Nigel Don<br />
+</strong><strong>6. Johann Lamont<br />
+</strong><strong>7. Bill Aitken<br />
+</strong><strong>8. Brian Adam<br />
+</strong><strong>9. Margo MacDonald<br />
+</strong><strong>10. Ross Finnie<br />
+</strong><strong>11. Dr Richard Simpson<br />
+</strong><strong>12. Joe FitzPatrick<br />
+</strong><strong>13. Andy Kerr<br />
+</strong><strong>14. Bill Butler<br />
+</strong><strong>15. Ken Macintosh<br />
+</strong><strong>16. Shirley-Anne Somerville<br />
+</strong><strong>17. Mary Mulligan<br />
+</strong><strong>18. Iain Smith<br />
+</strong><strong>19. Helen Eadie<br />
+</strong><strong>20. Rhoda Grant</strong></p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-07.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-07an.htm"><strong>An</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-07a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07b.htm">B</a></strong></td>
+    <td width="7%" align="center">C</td>
+    <td width="7%" align="center"><a href="bb-02-07d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-07h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-07i.htm"><strong>I</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-07j.htm">J</a></strong></td>
+  </tr>
+</table>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
