--- a/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-19d.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-19d.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-02-18" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-02-19d.htm" />
+<meta name="Source" content="BB02-20080219.doc />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -83,7 +83,7 @@
       <img src="../../../images/pixel/transparent.gif" alt=" " width="0" height="0" /></td>
      <td class="curveCell2"></td>
      <td class="crumbTrail">
-      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --><a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
+      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --> <a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
     </tr>
     <tr>
      <td rowspan="3" valign="top" class="navTable" style="border-left: #999999 1px solid;border-bottom: #999999 1px solid; ">&nbsp;</td>
@@ -91,34 +91,48 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 28/2008: Tuesday 19 February 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
-          <p align="center"><strong>Contents</strong></p>
-          <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
-          <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
-          <blockquote>
-            <p>- Meetings of Committees</p>
-            <p>- Meeting of the Parliament</p>
-          </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
-          <p>Section D: <U>Oral Questions</u></p>
-          <blockquote>
-            <p>- Questions selected for First Minister&rsquo;s Question Time </p>
-            <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
-          </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
-          <p>Section G: <U>Bills</u></p>
-          <blockquote>
-            <p>- New Bills introduced</p>
-            <p>- New amendments to Bills</p>
-            <p>- Members&rsquo; Bills proposals</p>
-          </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
-          <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-19.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19an.htm"><strong>An</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19b.htm">B</a></strong></td>
+    <td width="7%" align="center"><a href="bb-02-19c.htm"><strong>C</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-19h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19i.htm"><strong>I</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19j.htm">J</a></strong></td>
+  </tr>
+</table>
+<p align="center"><strong>Section D - Oral questions selected for answer on 21 February 2008</strong></p>
+<p align="center"><strong>First Minister&rsquo;s Question Time</A></strong></p>
+<p><strong>1. Ms Wendy Alexander:</strong> To ask the First Minister what engagements he has planned for the rest of the day.  (S3F-00516)</p>
+<p><strong>2. Annabel Goldie:</strong> To ask the First Minister when he will next meet the Secretary of State for Scotland.  (S3F-00517)</p>
+<p><strong>3. Nicol Stephen:</strong> To ask the First Minister what issues will be discussed at the next meeting of the Cabinet.  (S3F-00518)</p>
+<p><strong>4. Bob Doris:</strong> To ask the First Minister whether the Scottish Government considers that lottery funding could make a contribution to building a legacy for the 2014 Commonwealth Games.  (S3F-00530)</p>
+<p><strong>5. Paul Martin:</strong> To ask the First Minister what additional measures are being taken to monitor registered sex offenders in Scotland.  (S3F-00519)</p>
+<p><strong>6. Murdo Fraser:</strong> To ask the First Minister how the NHS in Scotland will provide adequate support for war veterans and their families. (S3F-00521)</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-19.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19an.htm"><strong>An</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19b.htm">B</a></strong></td>
+    <td width="7%" align="center"><a href="bb-02-19c.htm"><strong>C</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-19h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center"><a href="bb-02-19i.htm"><strong>I</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-19j.htm">J</a></strong></td>
+  </tr>
+</table>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
