--- a/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-20e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-08_bb-02-20e.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-02-19" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-02-20e.htm" />
+<meta name="Source" content="BB02-20080220.doc />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -83,7 +83,7 @@
       <img src="../../../images/pixel/transparent.gif" alt=" " width="0" height="0" /></td>
      <td class="curveCell2"></td>
      <td class="crumbTrail">
-      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --><a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
+      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --> <a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
     </tr>
     <tr>
      <td rowspan="3" valign="top" class="navTable" style="border-left: #999999 1px solid;border-bottom: #999999 1px solid; ">&nbsp;</td>
@@ -91,34 +91,70 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 29/2008: Wednesday 20 February 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
-          <p align="center"><strong>Contents</strong></p>
-          <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
-          <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
-          <blockquote>
-            <p>- Meetings of Committees</p>
-            <p>- Meeting of the Parliament</p>
-          </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
-          <p>Section D: <U>Oral Questions</u></p>
-          <blockquote>
-            <p>- Questions selected for First Minister&rsquo;s Question Time </p>
-            <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
-          </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
-          <p>Section G: <U>Bills</u></p>
-          <blockquote>
-            <p>- New Bills introduced</p>
-            <p>- New amendments to Bills</p>
-            <p>- Members&rsquo; Bills proposals</p>
-          </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
-          <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-20.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center">An</td>
+    <td width="7%" align="center"><a href="bb-02-20a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-20b.htm">B</a></strong></td>
+    <td width="7%" align="center">C</td>
+    <td width="7%" align="center">D</td>
+    <td width="7%" align="center"><strong><a href="bb-02-20e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-20f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-20h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center">I</td>
+    <td width="7%" align="center"><strong><a href="bb-02-20j.htm">J</a></strong></td>
+  </tr>
+</table>
+<p align="center"><strong>Section E &ndash; Written questions lodged on 19 February 2008</strong></p>
+<p><strong>Questions marked with a triangle (&#916;) are initiated by the Scottish Executive in order to facilitate the provision of information to the Parliament.</strong></p>
+<p><strong>Questions in which a member has indicated a declarable interest are marked with an &quot;R&quot;.</strong></p>
+<p><strong>S3W-10005</strong> <strong>Patricia Ferguson:</strong> To ask the Scottish Executive whether it has reviewed the protocol, signed by the Health and Safety Executive and Scottish police forces in 2005, whereby all deaths at work are treated as potential homicides.</p>
+<p><strong>S3W-10006</strong> <strong>Patricia Ferguson:</strong> To ask the Scottish Executive, further to the answer to question S3W-6277 by Stewart Maxwell on 21 November 2007, what progress has been made on the review of the central heating programme and when the outcome of the review will be reported to the Parliament.</p>
+<p><strong>S3W-10007</strong> <strong>Patricia Ferguson:</strong> To ask the Scottish Executive whether it is considering the introduction of a social insurance and maintenance programme as part of the free central heating programme.</p>
+<p><strong>S3W-10008</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive what plans it has to raise awareness of drug support services in the north east of Scotland.</p>
+<p><strong>S3W-10009</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive what action it will take to support those who live with people suffering from mental health and substance abuse problems.</p>
+<p><strong>S3W-10010</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive what plans it has to support children who have been affected by substance misuse.</p>
+<p><strong>S3W-10011</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many deaths in (a) NHS Grampian and (b) NHS Tayside hospitals from 1999 to 2007 were alcohol-related and, of these, how many were individuals aged (i) under 18, (ii) 18 to 29, (iii) 30 to 55 and (iv) over 55.</p>
+<p><strong>S3W-10012</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many deaths in (a) NHS Grampian and (b) NHS Tayside hospitals from 1999 to 2007 were drug-related and, of these, how many were individuals aged (i) under 18, (ii) 18 to 29, (iii) 30 to 55 and (iv) over 55.</p>
+<p><strong>S3W-10013</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive what plans it has to create a mechanism for Grampian that would systematically review drug-related deaths.</p>
+<p><strong>S3W-10014</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many incidents of domestic abuse recorded by the police in Grampian from 2001-02 to 2006-07 were alcohol-related.</p>
+<p><strong>S3W-10015</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many incidents of domestic abuse recorded by the police in Grampian from 2001-02 to 2006-07 were drug-related.</p>
+<p><strong>S3W-10016</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive what action it is taking to ensure that adequate funding is provided to deliver support services across (a) Aberdeen City, (b) Aberdeenshire and (c) Angus for victims of domestic abuse.</p>
+<p><strong>S3W-10017</strong> <strong>Keith Brown:</strong> To ask the Scottish Executive whether it is satisfied that the current regulations for ensuring that road users are kept informed of the likely completion dates of road maintenance projects offer those users adequate levels of information.</p>
+<p><strong>S3W-10018</strong> <strong>Keith Brown:</strong> To ask the Scottish Executive whether it has any plans to improve or review the current regulations for ensuring that road users are kept informed of the likely completion dates of road maintenance projects.</p>
+<p><strong>S3W-10019</strong> <strong>Keith Brown:</strong> To ask the Scottish Executive whether it would consider in principle requiring by regulation that road maintenance projects display prominently on site the most up-to-date expected completion date, based on the maintenance company&rsquo;s plans.</p>
+<p><strong>S3W-10020</strong> <strong>Keith Brown:</strong> To ask the Scottish Executive what its position is on the potential for a North Sea underwater energy transmission network for the large-scale transmission of energy between different parts of Scotland, as an objective separate from the aim of internationally transmitting energy for export which is generally associated with such a scheme.</p>
+<p><strong>S3W-10021</strong> <strong>Iain Smith:</strong> To ask the Scottish Executive when it intends to establish a framework for the regulation and approval of tenancy deposits schemes under the provisions of the Housing (Scotland) Act 2006.</p>
+<p><strong>S3W-10022</strong> <strong>Iain Smith:</strong> To ask the Scottish Executive what action it intends to take to prevent situations where tenants suffer as a result of landlords being unable to repay their tenancy deposits.</p>
+<p><strong>S3W-10023</strong> <strong>Iain Smith:</strong> To ask the Scottish Executive what action it intends to take to increase the protection available to tenants from landlords making unjustified deductions from their tenancy deposits.</p>
+<p><strong>S3W-10024</strong> <strong>Iain Smith:</strong> To ask the Scottish Executive what plans it has to commission further research into the scale of problems encountered by tenants who are unable to recover tenancy deposits owed to them.</p>
+<p><strong>S3W-10025</strong> <strong>John Wilson:</strong> To ask the Scottish Executive what the turnover of prison governors has been over the last three years.</p>
+<p><strong>S3W-10026</strong> <strong>John Wilson:</strong> To ask the Scottish Executive how many prison governors are absent on sick leave, secondment or for any other reason.</p>
+<p><strong>S3W-10027</strong> <strong>John Wilson:</strong> To ask the Scottish Executive how many prisons have temporary or acting governors.</p>
+<p><strong>S3W-10028</strong> <strong>John Wilson:</strong> To ask the Scottish Executive what the arrangements are for career development and succession planning at senior levels in the Scottish Prison Service.</p>
+<p><strong>S3W-10029</strong> <strong>Jeremy Purvis:</strong> To ask the Scottish Executive what estimate can be made of the overall cost of making Scottish and English national pensioners&rsquo; bus passes interchangeable and what proportion of this cost could be expected to arise from the use of (a) Scottish bus passes in England and (b) English bus passes in Scotland. </p>
+<p><strong>S3W-10030</strong> <strong>Christine Grahame:</strong> To ask the Scottish Executive how many houses in the public sector were suitable for families with more than one family member with a disability in each year since 1999, broken down by local authority area.</p>
+
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-02-20.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center">An</td>
+    <td width="7%" align="center"><a href="bb-02-20a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-02-20b.htm">B</a></strong></td>
+    <td width="7%" align="center">C</td>
+    <td width="7%" align="center">D</td>
+    <td width="7%" align="center"><strong><a href="bb-02-20e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-02-20f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-02-20h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center">I</td>
+    <td width="7%" align="center"><strong><a href="bb-02-20j.htm">J</a></strong></td>
+  </tr>
+</table>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
