--- a/parldata/cmpages/sp/bulletins/day-bb-08_bb-03-06e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-08_bb-03-06e.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-03-05" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-03-06e.htm" />
+<meta name="Source" content="BB02-20080306.doc />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -83,7 +83,7 @@
       <img src="../../../images/pixel/transparent.gif" alt=" " width="0" height="0" /></td>
      <td class="curveCell2"></td>
      <td class="crumbTrail">
-      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --><a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
+      &nbsp;<a href="../../../home.htm">Home</a> &gt; <!-- InstanceBeginEditable name="breadCrumbEditable" --> <a href="../../index.htm">Parliamentary Business</a> &gt; <a href="../index.htm">Business Bulletin</a> &gt; <a href="../2008.htm">Business Bulletin 2008</a><!-- InstanceEndEditable --> &gt; <a href="javascript:history.go(-1)">..back</a></td>
     </tr>
     <tr>
      <td rowspan="3" valign="top" class="navTable" style="border-left: #999999 1px solid;border-bottom: #999999 1px solid; ">&nbsp;</td>
@@ -91,34 +91,56 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 40/2008: Thursday 6 March 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
-          <p align="center"><strong>Contents</strong></p>
-          <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
-          <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
-          <blockquote>
-            <p>- Meetings of Committees</p>
-            <p>- Meeting of the Parliament</p>
-          </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
-          <p>Section D: <U>Oral Questions</u></p>
-          <blockquote>
-            <p>- Questions selected for First Minister&rsquo;s Question Time </p>
-            <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
-          </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
-          <p>Section G: <U>Bills</u></p>
-          <blockquote>
-            <p>- New Bills introduced</p>
-            <p>- New amendments to Bills</p>
-            <p>- Members&rsquo; Bills proposals</p>
-          </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
-          <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-03-06.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center">An</td>
+    <td width="7%" align="center"><a href="bb-03-06a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06b.htm">B</a></strong></td>
+    <td width="7%" align="center"><a href="bb-03-06c.htm"><strong>C</strong></a></td>
+    <td width="7%" align="center"><a href="bb-03-06d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-03-06h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center"><a href="bb-03-06i.htm"><strong>I</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06j.htm">J</a></strong></td>
+  </tr>
+</table>
+<p align="center"><strong>Section E &ndash; Written questions lodged on 5 March 2008</strong></p>
+<p><strong>Questions marked with a triangle (&#916;) are initiated by the Scottish Executive in order to facilitate the provision of information to the Parliament.</strong></p>
+<p><strong>Questions in which a member has indicated a declarable interest are marked with an &quot;R&quot;.</strong></p>
+<p><strong>S3W-10696</strong> <strong>Liam McArthur:</strong> To ask the Scottish Executive whether it sought advice on the legality of its decision to favour a select group of islands when introducing Road equivalent tariff fares on ferry routes and what the terms were of any such advice sought on the matter.</p>
+<p><strong>S3W-10697</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many students will lose bursary income as a result of changes to student support in 2008-09.</p>
+<p><strong>S3W-10698</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how much is being invested in the Young Students&rsquo; Bursary scheme in 2008-09 and how much was spent on the scheme in 2007-08.</p>
+<p><strong>S3W-10699</strong> <strong>Jamie McGrigor:</strong> To ask the Scottish Executive whether it recognises the Scottish Environment Protection Agency as a fund-providing body.</p>
+<p><strong>S3W-10700</strong> <strong>Jamie McGrigor:</strong> To ask the Scottish Executive what new powers it has recently given, or expects to give, to the Scottish Environment Protection Agency.</p>
+<p><strong>S3W-10701</strong> <strong>Jamie McGrigor:</strong> To ask the Scottish Executive what organisations and causes are able to access funds that are distributed by the Scottish Environment Protection Agency.</p>
+<p><strong>S3W-10702</strong> <strong>Karen Gillon:</strong> To ask the Scottish Executive whether it will make an order for bluetongue vaccine now to ensure that a bank is available as soon as possible after the product comes on the market.</p>
+<p><strong>S3W-10703</strong> <strong>Karen Gillon:</strong> To ask the Scottish Executive whether it believes that Scotland should implement a compulsory vaccination scheme against bluetongue and, if so, when such a vaccination programme should take place.</p>
+<p><strong>S3W-10704</strong> <strong>Jamie McGrigor:</strong> To ask the Scottish Executive whether, in light of scientific evidence relating to the importance of peatland as a carbon store, it will revise its policy with regard to the siting of wind farms in peatland areas.</p>
+<p><strong>S3W-10705</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many ambulances are in use by each NHS board area.</p>
+<p><strong>S3W-10706</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many ambulances are to be provided for each NHS board area during the current spending review period.</p>
+<p><strong>S3W-10707</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how much funding it will provide during the current spending review period to fund new ambulances and up-to-date mobile equipment to use on them, broken down by NHS board area.</p>
+<p><strong>S3W-10708</strong> <strong>Richard Baker:</strong> To ask the Scottish Executive how many 999 calls were responded to in (a) 2003, (b) 2004, (c) 2005, (d) 2006 and (e) 2007, broken down by NHS board area.</p>
+<table width="100%"  border="1" cellpadding="2" cellspacing="0" bordercolor="#CCCCCC">
+  <tr>
+    <td width="23%" height="22" align="center"><a href="bb-03-06.htm"><strong>Contents</strong></a></td>
+    <td width="7%" align="center">An</td>
+    <td width="7%" align="center"><a href="bb-03-06a.htm"><strong>A</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06b.htm">B</a></strong></td>
+    <td width="7%" align="center"><a href="bb-03-06c.htm"><strong>C</strong></a></td>
+    <td width="7%" align="center"><a href="bb-03-06d.htm"><strong>D</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06e.htm">E</a></strong></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06f.htm">F</a></strong></td>
+    <td width="7%" align="center">G</td>
+    <td width="7%" align="center"><a href="bb-03-06h.htm"><strong>H</strong></a></td>
+    <td width="7%" align="center"><a href="bb-03-06i.htm"><strong>I</strong></a></td>
+    <td width="7%" align="center"><strong><a href="bb-03-06j.htm">J</a></strong></td>
+  </tr>
+</table>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
