--- a/parldata/cmpages/sp/bulletins/contents-bb-08_bb-02-07.htm
+++ b/parldata/cmpages/sp/bulletins/contents-bb-08_bb-02-07.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-02-06" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-02-07.htm" />
+<meta name="Source" content="BB02-20080207.doc />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -91,34 +91,57 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 24/2008: Thursday 7 February 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
+          <table  border="0" cellpadding="0" cellspacing="0" class="pushedTable" title="Summary of Today&rsquo;s Business" summary="Summary of Today&rsquo;s Business">
+            <caption class="caption">
+            </caption>
+            <tr class="pushedTable">
+              <td><p align="center"><strong><font face="Arial">Summary of Today&rsquo;s Business</font></strong></p>
+                  <p align="center"><strong><font face="Arial">Meetings of Committees</font></strong></p>
+                <p><strong>9.15 am</strong>&#9;Parliamentary Bureau Motions</p>
+                <p><em>followed by</em>&#9;Ministerial Statement: Support for Survivors of Historic In-care and Institutional Abuse</p>
+                <p><em>followed by</em>&#9;Scottish Government Debate: Commercial Forestry</p>
+                <p><strong>11.40 am</strong>&#9;General Question Time</p>
+                <p><strong>12 noon&#9;</strong>First Minister&rsquo;s Question Time</p>
+                <p><strong>2.15 pm&#9;</strong>Themed Question Time</p>
+                <blockquote>
+                  <p>&#9;&#9;Europe, External Affairs and Culture;<br />
+                    Education and Lifelong Learning</p>
+                </blockquote>
+                <p><strong>2.55 pm</strong>&#9;Scottish Government Debate: Local Government Finance (Scotland) Order 2008</p>
+                <p><em>followed by</em>&#9;Parliamentary Bureau Motions</p>
+                <p><strong>5.00 pm</strong>&#9;Decision Time</p>
+                <p><em>followed by</em>&#9;Members&rsquo; Business</p>
+                <p><strong>For full details of today&rsquo;s business, see Section <a href="bb-02-07a.htm">A</a>.  For full details of the future business, see sections <a href="bb-02-07b.htm">B</a> and C.</strong></p></td>
+            </tr>
+          </table>
           <p align="center"><strong>Contents</strong></p>
           <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
-          <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
+          <p><a href="bb-02-07an.htm"><strong>Announcements:</strong></a></p>
+          <p><a href="bb-02-07a.htm"><strong>Section A: <U>Today&rsquo;s Business</u></strong></a><strong></strong></p>
           <blockquote>
-            <p>- Meetings of Committees</p>
+            <p>- Meetings of Committees`</p>
             <p>- Meeting of the Parliament</p>
           </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
-          <p>Section D: <U>Oral Questions</u></p>
+          <p><strong><a href="bb-02-07b.htm">Section B: <U>Future Meetings of the Parliament</u></a><U></u></strong></p>
+          <p>Section C: <u>Future Meetings of Committees</u></p>
+          <p><a href="bb-02-07d.htm"><strong>Section D: <U>Oral Questions</u></strong></a><strong><U></u></strong></p>
           <blockquote>
             <p>- Questions selected for First Minister&rsquo;s Question Time </p>
             <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
           </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
+          <p><a href="bb-02-07e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
+          <p><strong><a href="bb-02-07f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
           <p>Section G: <U>Bills</u></p>
           <blockquote>
             <p>- New Bills introduced</p>
             <p>- New amendments to Bills</p>
             <p>- Members&rsquo; Bills proposals</p>
           </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
-          <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+          <p><a href="bb-02-07h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
+          <p>		    <a href="bb-02-07i.htm"><strong>Section I: <U>Petitions</U></strong></a> &ndash;  New Public Petitions</p>
+          <p><strong><a href="bb-02-07j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
