--- a/parldata/cmpages/sp/bulletins/contents-bb-08_bb-03-04.htm
+++ b/parldata/cmpages/sp/bulletins/contents-bb-08_bb-03-04.htm
@@ -3,10 +3,10 @@
 <head>
 <!-- InstanceBeginEditable name="head" -->
 <title>Scottish Parliament - Business Bulletin</title>
-<meta name="Date" content="2008-02-01" />
+<meta name="Date" content="2008-03-03" />
 <meta name="ObjectType" content="Business Bulletin" />
-<meta name="Identifier" content="bb-02-04.htm" />
-<meta name="Source" content="BB02-20080204.doc />
+<meta name="Identifier" content="bb-03-04.htm" />
+<meta name="Source" content="BB02-20080304.doc />
 <meta name="The Scottish Parliament - Business Bulletin" />
 <!-- InstanceEndEditable -->
 <link href="../../../css/spMain.css" rel="stylesheet" type="text/css" />
@@ -91,34 +91,50 @@
      <td valign="top"><a name="mainContent" id="mainContent"></a>
       <table border="0" width="100%" cellpadding="10" cellspacing="0" class="contentTable">
        <tr>
-        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 21/2008: Monday 4 February 2008<!-- InstanceEndEditable --></span><br />
+        <td>  <span class="largeHeading" dir="ltr" lang="en" xml:lang="en"><!-- InstanceBeginEditable name="Page Title or Name" -->Business Bulletin No. 38/2008: Tuesday 4 March 2008<!-- InstanceEndEditable --></span><br />
           <!-- InstanceBeginEditable name="Page Content" -->
+          <table  border="0" cellpadding="0" cellspacing="0" class="pushedTable" title="Summary of Today&rsquo;s Business" summary="Summary of Today&rsquo;s Business">
+            <caption class="caption">
+            </caption>
+            <tr class="pushedTable">
+              <td><p align="center"><strong>Summary of Today&rsquo;s Business</strong></p>
+                  <p align="center"><strong>Meetings of Committees</strong></p>
+                  <p><strong>10.00 am</strong>&#9;European and External Relations Committee&#9;<strong>Committee Room 1</strong></p>
+                  <p><strong>11.30 am</strong>&#9;Justice Committee&#9;<strong>Committee Room 2</strong></p>
+                  <p><strong>1.00 pm</strong>&#9;Standards, Procedures and Public Appointments Committee&#9;<strong>Committee Room 5</strong></p>
+                  <p><strong>1.30 pm</strong>&#9;Transport, Infrastructure and Climate Change Committee&#9;<strong>Corran Halls, Oban</strong></p>
+                  <p><strong>2.00 pm</strong>&#9;Public Petitions Committee<strong>&#9;Committee Room 2</strong></p>
+                  <p><strong>2.15 pm</strong>&#9;Subordinate Legislation Committee&#9;<strong>Committee Room 1</strong></p>
+                  </DIR></DIR></DIR></DIR><strong>For full details of today&rsquo;s business, see Section <a href="bb-03-04a.htm">A</a>.  For full details of the future business, see sections <a href="bb-03-04b.htm">B</a> and <a href="bb-03-04c.htm">C</a>.</strong>
+                  <hr />            </td>
+            </tr>
+          </table>
           <p align="center"><strong>Contents</strong></p>
           <p>The sections which appear in today&rsquo;s Business Bulletin are in <strong>bold</strong></p>
           <p>Announcements:</p>
-          <p>Section A: <U>Today&rsquo;s Business</u></p>
+          <p><a href="bb-03-04a.htm"><strong>Section A: <U>Today&rsquo;s Business</u></strong></a><strong></strong></p>
           <blockquote>
-            <p>- Meetings of Committees</p>
+            <p>- Meetings of Committees`</p>
             <p>- Meeting of the Parliament</p>
           </blockquote>
-          <p><a href="bb-02-04b.htm"><strong>Section B: <U>Future Meetings of the Parliament</u></strong></a></p>
-          <p><a href="bb-02-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
-          <p>Section D: <U>Oral Questions</u></p>
+          <p><strong><a href="bb-03-04b.htm">Section B: <U>Future Meetings of the Parliament</u></a><U></u></strong></p>
+          <p><a href="bb-03-04c.htm"><strong>Section C: <u>Future Meetings of Committees</u></strong></a></p>
+          <p><a href="bb-03-04d.htm"><strong>Section D: <U>Oral Questions</u></strong><U></u></a></p>
           <blockquote>
             <p>- Questions selected for First Minister&rsquo;s Question Time </p>
             <p>- Questions selected for response by Ministers and Junior Scottish Ministers at Question Time</p>
           </blockquote>
-          <p><a href="bb-02-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
-          <p><strong><a href="bb-02-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
+          <p><a href="bb-03-04e.htm"><strong>Section E: <U>Written Questions</U></strong></a> &ndash; New Questions for Written Answer </p>
+          <p><strong><a href="bb-03-04f.htm">Section F: <U>Motions and Amendments</U></a></strong> </p>
           <p>Section G: <U>Bills</u></p>
           <blockquote>
             <p>- New Bills introduced</p>
             <p>- New amendments to Bills</p>
             <p>- Members&rsquo; Bills proposals</p>
           </blockquote>
-          <p><a href="bb-02-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
+          <p><a href="bb-03-04h.htm"><strong>Section H: <U>New Documents</U></strong></a> &ndash; New documents laid before the Parliament and Committee Reports published</p>
           <p>		    Section I: <U>Petitions</U> &ndash;  New Public Petitions</p>
-          <p><strong><a href="bb-02-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
+          <p><strong><a href="bb-03-04j.htm">Section J: <U>Progress of Legislation</U></a></strong> &ndash; Progress of Bills and Subordinate Legislation</p>
           <!-- InstanceEndEditable --></td>
        </tr>
       </table>
